--- a/src/resources/views/pages/admin/create-product.ejs
+++ b/src/resources/views/pages/admin/create-product.ejs
@@ -338,7 +338,8 @@
                     <h4>Create new Product</h4>
                     <div class="row mt-3">
                         <div>
-                            <form action="/products/create-product/submit" method="post" enctype="multipart/form-data">
+                            <form action="/admin/create-product" method="POST" enctype="multipart/form-data">
+                             
                                 <div class="mb-3">
                                     <input type="text" name="productName" class="form-control" placeholder="Product Name">
                                 </div>
