--- a/src/resources/views/pages/admin/login.ejs
+++ b/src/resources/views/pages/admin/login.ejs
@@ -338,11 +338,12 @@
                     <div class="row mt-3">
                         <div>
                             <form action="/login" method="post">
+                              
                                 <div class="mb-3">
                                     <input type="text" class="form-control" name="userid" placeholder="User Name"  aria-describedby="emailHelp">
                                   </div>
                                 <div class="mb-3">         
-                                  <input type="password" class="form-control" name="userpassword" placeholder="Password" aria-describedby="emailHelp">
+                                  <input type="text" class="form-control" name="userpassword" placeholder="Password" aria-describedby="emailHelp">
                                 </div>
                                 <div class="text-center">
                                     <button type="submit" class="btn btn-primary">Log In</button>
